# toolchain

./: .gitignore  README.md
cbu/: .bazelrc  .clang-format  .gitignore  BUILD  README.md  WORKSPACE  align.h  bit.h  byte_size.h  byte_size_test.cc  byteorder.h  bytes_view.h  clang-libc++.bazelrc  compile_flags.txt  concepts.h  concepts_test.cc  defer.h  encoding.h  encoding_test.cc  fastarith.cc  fastarith.h  fastarith_test.cc  fastdiv.h  fastdiv_test.cc  faststr.cc  faststr.h  faststr_test.cc  heapq.h  immutable_string.h  immutable_string_test.cc  memory.h  memory_test.cc  mp.cc  mp.h  mp_test.cc  range.h  range_test.cc  scoped_fd.h  shared_instance.h  shared_instance_test.cc  (+12 more)
cbu/cbu/: .clang-format
cbu/cbu/alloc/: BUILD.bazel  alloc.cpp  alloc.h  misc.cpp  page.cpp  pagesize.h  permanent.h  private.h  raw_page_allocator.cpp  rb.h  small.cpp  tc.cpp  tc.h  trie.h
cbu/cbu/alloc/private/: common.h  page.h  permanent.h  rb.h  small.h  tc.h  trie.h
cbu/cbu/common/: BUILD.bazel  arch.h  arch_test.cc  bit.h  bit_cast.h  bit_test.cc  bitmask_ref.h  bitmask_ref_test.cc  bitmask_translate.h  byte_size.h  byte_size_test.cc  byteorder.h  byteorder_test.cc  bytes_view.h  bytes_view_test.cc  common_test.cc  common_test.h  compare.h  compare_test.cc  concepts.h  concepts_test.cc  defer.h  defer_test.cc  destruct.h  double_integer.h  double_integer_test.cc  encoding.cc  encoding.h  encoding_test.cc  escape.cc  escape.h  escape_test.cc  fastarith.cc  fastarith.h  fastarith_test.cc  fastdiv.h  fastdiv_test.cc  faststr.cc  faststr.h  faststr_test.cc  (+60 more)
cbu/cbu/common/compat/: span.h
cbu/cbu/compat/: BUILD.bazel  atomic_ref.h  compilers.h  platform.h  string.h  type_identity.h
cbu/cbu/coroutine/: BUILD.bazel  README.md  coroutine.S  coroutine.cpp  coroutine.h  coroutine_test.cpp  syscall_hook.cpp  syscall_hook.h
cbu/cbu/debug/: BUILD.bazel  gtest_formatters.cc  gtest_formatters.h
cbu/cbu/fsyscall/: BUILD.bazel  README.md  fsys-aux.h  fsyscall-macros-aarch64.h  fsyscall-macros-x86-64.h  fsyscall.h
cbu/cbu/io/: BUILD.bazel  atfile.h  atfile_with_length.h  fileutil.cc  fileutil.h  fileutil_test.cc  scoped_fd.cc  scoped_fd.h  scoped_mmap.cc  scoped_mmap.h  statx.h
cbu/cbu/malloc/: BUILD.bazel  README.md  main.cpp  malloc.h  misc.cpp  new.cpp  new.h  page.cpp  pagesize.cpp  pagesize.h  permanent.cpp  permanent.h  private.h  rb.h  small.cpp  tc.cpp  tc.h  trie.h  visibility.h
cbu/cbu/malloc/test/: BUILD.bazel  compare.sh  main.cpp
cbu/cbu/math/: BUILD.bazel  common.cc  common.h  common_test.cc  double_integer.h  double_integer_test.cc  fastdiv.h  fastdiv_test.cc  mp.cc  mp_test.cc  strict_overflow.h  strict_overflow_test.cc  super_integer.h  super_integer_test.cc  uint128.h
cbu/cbu/network/: BUILD.bazel  ipv4.cc  ipv4.h  ipv4_test.cc  ipv6.cc  ipv6.h  ipv6_test.cc
cbu/cbu/storage/: BUILD.bazel  string_pack.cc  string_pack.h  string_pack_test.cc  vlq.h  vlq_test.cc
cbu/cbu/strings/: BUILD.bazel  bytes_view.h  bytes_view_test.cc  encoding.cc  encoding.h  encoding_test.cc  escape.cc  escape.h  escape_test.cc  faststr-wrap.cc  faststr.cc  faststr.h  faststr_test.cc  fixed_length_compare.h  fixed_length_compare_test.cc  fixed_string.h  hex.h  hex_test.cc  immutable_string.h  immutable_string_test.cc  length_prefixed_string.h  length_prefixed_string_literal_test.cc  length_prefixed_string_test.cc  low_level_buffer_filler.h  low_level_buffer_filler_test.cc  misc.cc  misc.h  misc_test.cc  short_string.h  short_string_test.cc  str_array.h  str_builder.h  str_builder_test.cc  str_cat.cc  str_cat.h  str_cat_test.cc  str_split.h  str_split_test.cc  str_to_number.h  str_to_number_internal.h  (+8 more)
cbu/cbu/sys/: BUILD.bazel  asm.h  cached_pid.cc  cached_pid.h  cacheless.cc  cacheless.h  cacheless_test.cc  init_guard.cc  init_guard.h  init_guard_test.cc  lazy_fd.cc  lazy_fd.h  lazy_fd_test.cc  low_level_mutex.S  low_level_mutex.cc  low_level_mutex.h  low_level_mutex_test.cc
cbu/cbu/tweak/: BUILD.bazel  multi_threaded.cc  single_threaded.cc  tweak.cc  tweak.h  use_brk.cc
cbu/compat/: span.h  string.h
egmake/: .gitignore  GNUmakefile  README.md  cat.c  clang_march_native.c  cpus.c  expanduser.c  fsyscall-macros-x86-64.h  fsyscall.h  hostname.c  in_range.c  machine.c  main.c  mkdirp.c  pwd.c  readlink.c  realpath.c  relpath.c  run_test.sh  shell.c  symlink.c  util.c  util.h  which.c
fsyscall/: LICENSE  README.md  fsys-aux.h  fsyscall.h
hacktoolchain/: README.md  as.py  compiler-wrapper  run-tests.py
hacktoolchain/as_rewrite/: flags.py  generic.py  main.py  preprocess.py  utils.py  x86.py  zeroextend.py
hacktoolchain/tests/: and-or-xor-const.S  canonicalizations.S  cmp-convert.S  free-null.S  icf.S  jmp-ret.S  jmp-to-current.S  shr-shl.S  sse-misc.S  stack-store.S  x32.S  zero-extend.S
makefiles/: Makefile-asm  Makefile-c  Makefile-c-v2  multiple-output-helper.py
patches/: gcc-12.patch  gcc-13.patch  gcc-14.patch  gcc-15.patch  gcc-16.patch  libfmt-11.patch  prepare.sh
scripts/: bincmp  detailed_size  fast_gtest  pythondep  unassembly
tinyswiss/: TINYX32BUILD  build.py  j.cpp  latest.cpp  main.c  main.cpp  mvln.cpp  running-browser.cpp  utils.cpp  utils.h
tinyx32/: build.py  fsys-aux.h  stage1.py  string_ref.hpp  string_view.hpp  tinyx32-cxx.h  tinyx32.h
tinyx32/lib/: malloc.c  math.c  start.S  stdlib.c  string.c  sysinfo.c  unistd.c
tinyx64/: build.py  fsyscall-macros-aarch64.h  tinyx64-cxx.h  tinyx64.h
tinyx64/lib/: malloc.c  math.c  start.S  stdlib.c  string.c  sysinfo.c  unistd.c
