# cbu - chys's basic utilities
# Copyright (c) 2019-2023, chys <admin@CHYS.INFO>
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#     * Redistributions of source code must retain the above copyright
#       notice, this list of conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above copyright
#       notice, this list of conditions and the following disclaimer in the
#       documentation and/or other materials provided with the distribution.
#     * Neither the name of chys <admin@CHYS.INFO> nor the
#       names of its contributors may be used to endorse or promote products
#       derived from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY chys <admin@CHYS.INFO> ''AS IS'' AND ANY
# EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL chys <admin@CHYS.INFO> BE LIABLE FOR ANY
# DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

cc_library(
  name = 'common',
  srcs = [
    'unit_prefix.cc',
  ],
  hdrs = [
    'unit_prefix.h',
  ],
  deps = [
    ':header_only',
    ':stdhack',
    '//cbu/compat',
    '//cbu/math:common',
    '//cbu/math:fastdiv',
  ],
  # cbu is a collection of really TINY utilities so you may always want to
  # use static linking
  linkstatic=True,
  visibility = ["//visibility:public"],
)

# Header-only utilities
cc_library(
  name = 'header_only',
  srcs = [],
  hdrs = [
    'arch.h',
    'bit_cast.h',
    'bit.h',
    'bitmask_ref.h',
    'byteorder.h',
    'byte_size.h',
    'compare.h',
    'defer.h',
    'fifo_list.h',
    'functional.h',
    'heapq.h',
    'hint.h',
    'iterator.h',
    'memory.h',
    'once.h',
    'ref_cnt.h',
    'shared_instance.h',
    'swap.h',
    'tags.h',
    'type_traits.h',
    'utility.h',
  ],
  deps = [
    ':concepts',
    '//cbu/compat:compat',
    '//cbu/tweak:tweak',
  ],
  linkstatic=True,
  visibility = ["//visibility:public"],
)

cc_library(
  name = 'concepts',
  srcs = [],
  hdrs = ['concepts.h'],
  deps = [],
  linkstatic=True,
  visibility = ["//visibility:public"],
)

cc_library(
  name = 'stdhack',
  srcs = ['stdhack.cc'],
  hdrs = ['stdhack.h'],
  deps = [
    '//cbu/compat:compat',
    '//cbu/tweak:tweak',
  ],
  linkstatic=True,
  visibility = ["//visibility:public"],
)

cc_library(
  name = 'procutil',
  srcs = [
    'procutil.cc',
  ],
  hdrs = [
    'procutil.h',
  ],
  deps = [
    '//cbu/strings:header_only',
    '//cbu/fsyscall',
  ],
  linkstatic=True,
  visibility = ["//visibility:public"],
)

cc_test(
  name = 'common-tests',
  srcs = glob(['*_test.cc', '*_test.h']),
  deps = [
    ':common',
    '@com_google_googletest//:gtest_main',
    '//cbu/debug:gtest_formatters',
  ],
)
