# cbu - chys's basic utilities
# Copyright (c) 2019-2021, chys <admin@CHYS.INFO>
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#     * Redistributions of source code must retain the above copyright
#       notice, this list of conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above copyright
#       notice, this list of conditions and the following disclaimer in the
#       documentation and/or other materials provided with the distribution.
#     * Neither the name of chys <admin@CHYS.INFO> nor the
#       names of its contributors may be used to endorse or promote products
#       derived from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY chys <admin@CHYS.INFO> ''AS IS'' AND ANY
# EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL chys <admin@CHYS.INFO> BE LIABLE FOR ANY
# DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

cc_library(
  name = 'math',
  srcs = [],
  hdrs = [],
  deps = [
    ':common',
    ':mp',
    ':double_integer',
    ':strict_overflow',
    ':super_integer',
  ],
  # cbu is a collection of really TINY utilities so you may always want to
  # use static linking
  linkstatic=True,
  visibility = ["//visibility:public"],
)

cc_library(
  name = 'common',
  srcs = ['common.cc'],
  hdrs = ['common.h'],
  deps = [
    '//cbu/common:header_only',
  ],
  linkstatic=True,
  visibility = ["//visibility:public"],
)

cc_library(
  name = 'double_integer',
  srcs = [],
  hdrs = ['double_integer.h'],
  deps = [
    ':strict_overflow',
  ],
  linkstatic=True,
  visibility = ["//visibility:public"],
)

cc_library(
  name = 'super_integer',
  srcs = [],
  hdrs = ['super_integer.h'],
  deps = [
    '//cbu/common:concepts',
  ],
  linkstatic=True,
  visibility = ["//visibility:public"],
)

cc_library(
  name = 'strict_overflow',
  srcs = [],
  hdrs = ['strict_overflow.h'],
  deps = [
    ':super_integer',
    '//cbu/common:concepts',
  ],
  linkstatic=True,
  visibility = ["//visibility:public"],
)

cc_library(
  name = 'mp',
  srcs = ['mp.cc'],
  hdrs = ['mp.h'],
  deps = [
    ':common',
    ':strict_overflow',
    ':fastdiv',
    '//cbu/common:header_only',
    '//cbu/strings:faststr',
    '//cbu/strings:common',
  ],
  linkstatic=True,
  visibility = ["//visibility:public"],
)

cc_library(
  name = 'fastdiv',
  srcs = [],
  hdrs = ['fastdiv.h'],
  deps = [
    '//cbu/math:double_integer',
  ],
  linkstatic=True,
  visibility = ["//visibility:public"],
)

cc_test(
  name = 'common-tests',
  srcs = glob(['*_test.cc', '*_test.h']),
  deps = [
    ':math',
    '@com_google_googletest//:gtest_main',
    '//cbu/debug:gtest_formatters',
  ],
)
